--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             </div>
 
             <div class="featured-part-two">
-                <img class="img-absolute" id="p2-img-1" src="/images/Circle design.svg" alt="">
-                <img class="img-absolute" id="p2-img-2" src="/images/main-camera.png" alt="">
+                <img class="img-absolute" id="p2-img-1" src="images/Circle design.svg" alt="">
+                <img class="img-absolute" id="p2-img-2" src="images/main-camera.png" alt="">
             </div>
         </section>
         <!-- Popular Collection -->
@@ -50,7 +50,7 @@
                 <div class="collections">
                     <div class="collection">
                         <div class="collection-banner">
-                            <img class="photos-collection" src="/images/tripod.png" alt="">
+                            <img class="photos-collection" src="images/tripod.png" alt="">
                         </div>
                         <div class="collection-detail">
                             <h3 class="collection-name">Flex Tripod</h3>
@@ -74,7 +74,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-banner">
-                            <img class="photos-collection" src="/images/mic.png" alt="">
+                            <img class="photos-collection" src="images/mic.png" alt="">
                         </div>
                         <div class="collection-detail">
                             <h3 class="collection-name">microphone</h3>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-banner">
-                            <img class="photos-collection" src="/images/airpod.png" alt="">
+                            <img class="photos-collection" src="images/airpod.png" alt="">
                         </div>
                         <div class="collection-detail">
                             <h3 class="collection-name">Airbuds</h3>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-banner">
-                            <img class="photos-collection" src="/images/drone.png" alt="">
+                            <img class="photos-collection" src="images/drone.png" alt="">
                         </div>
                         <div class="collection-detail">
                             <h3 class="collection-name">Drone</h3>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-banner">
-                            <img class="photos-collection" src="/images/lights.png" alt="">
+                            <img class="photos-collection" src="images/lights.png" alt="">
                         </div>
                         <div class="collection-detail">
                             <h3 class="collection-name">Light Setup</h3>
@@ -170,7 +170,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-banner">
-                            <img class="photos-collection" src="/images/setup.png" alt="">
+                            <img class="photos-collection" src="images/setup.png" alt="">
                         </div>
                         <div class="collection-detail">
                             <h3 class="collection-name">Photoshoot set</h3>
@@ -194,7 +194,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-banner">
-                            <img class="photos-collection" src="/images/camera.png" alt="">
+                            <img class="photos-collection" src="images/camera.png" alt="">
                         </div>
                         <div class="collection-detail">
                             <h3 class="collection-name">Vlogging Camera</h3>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-banner">
-                            <img class="photos-collection" src="/images/single-light.png" alt="">
+                            <img class="photos-collection" src="images/single-light.png" alt="">
                         </div>
                         <div class="collection-detail">
                             <h3 class="collection-name">Green Screen</h3>
@@ -242,7 +242,7 @@
                     </div>
                     <div class="collection">
                         <div class="collection-banner">
-                            <img class="photos-collection" src="/images/action.png" alt="">
+                            <img class="photos-collection" src="images/action.png" alt="">
                         </div>
                         <div class="collection-detail">
                             <h3 class="collection-name">Action Camera/h3>
