--- a/index.html
+++ b/index.html
@@ -245,23 +245,23 @@
                             <img class="photos-collection" src="images/action.png" alt="">
                         </div>
                         <div class="collection-detail">
-                            <h3 class="collection-name">Action Camera/h3>
-                                <h4 class="collection-price">$380.00</h4>
-                                <div class="collection-info">
-                                    <div>
-                                        <i class="fas fa-star filled"></i>
-                                        <i class="fas fa-star filled"></i>
-                                        <i class="fas fa-star filled"></i>
-                                        <i class="fas fa-star filled"></i>
-                                        <i class="fas fa-star-half-alt"></i>
-                                        <span>4.99</span>
-                                    </div>
-                                    <div class="description">
-                                        <p>Wordwide shifting</p>
-                                        <p>available</p>
-                                        <p>Buyers protection possible!</p>
-                                    </div>
+                            <h3 class="collection-name">Action Camera</h3>
+                            <h4 class="collection-price">$380.00</h4>
+                            <div class="collection-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star-half-alt"></i>
+                                    <span>4.99</span>
                                 </div>
+                                <div class="description">
+                                    <p>Wordwide shifting</p>
+                                    <p>available</p>
+                                    <p>Buyers protection possible!</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
